[package]
name = "piet_programming_language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
image = "0.25.2"
itertools = "0.13.0"
num = "0.4.3"
rustc-hash = "2.0.0"
